--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@react-three/drei": "^9.111.3",
+    "@react-three/fiber": "^8.17.5",
     "@types/react-transition-group": "^4.4.11",
+    "@types/three": "^0.167.2",
     "gsap": "^3.12.5",
+    "leva": "^0.9.35",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
-    "react-transition-group": "^4.4.5"
+    "react-transition-group": "^4.4.5",
+    "three": "^0.167.1"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -23,7 +28,10 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.6",
+    "glslify": "^7.1.1",
+    "glslify-loader": "^2.0.0",
     "postcss": "^8",
+    "raw-loader": "^4.0.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
