--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-hotkeys-hook": "^4.5.0",
     "react-transition-group": "^4.4.5",
     "three": "^0.167.1"
   },
