--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/three": "^0.167.2",
     "gsap": "^3.12.5",
     "leva": "^0.9.35",
+    "maath": "^0.10.8",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
