--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/fiber": "^8.17.5",
     "@types/react-transition-group": "^4.4.11",
     "@types/three": "^0.167.2",
+    "classnames": "^2.5.1",
     "gsap": "^3.12.5",
     "leva": "^0.9.35",
     "maath": "^0.10.8",
