--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^18",
     "react-hotkeys-hook": "^4.5.0",
     "react-transition-group": "^4.4.5",
-    "three": "^0.167.1"
+    "three": "^0.167.1",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@types/node": "^20",
