--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
     "editor.codeActionsOnSave": {
         "source.fixAll": "explicit"
     },
+    "files.eol": "\n",
     "eslint.validate": [
         "javascript"
     ],
