--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
     "incremental": true,
     "paths": {
       "@/*": [
-        "./src/*"
+        "./src/*",
+        "./public/*"
       ]
     }
   },
