Install hamo and usehooks-ts

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@gsap/react": "^2.1.1",
     "@react-three/drei": "^9.111.3",
     "@react-three/fiber": "^8.17.5",
+    "@studio-freight/hamo": "^0.6.33",
     "@types/react-transition-group": "^4.4.11",
     "@types/three": "^0.167.2",
     "classnames": "^2.5.1",
@@ -24,6 +25,7 @@
     "react-hotkeys-hook": "^4.5.0",
     "react-transition-group": "^4.4.5",
     "three": "^0.167.1",
+    "usehooks-ts": "^3.1.0",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
