--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "leva": "^0.9.35",
     "maath": "^0.10.8",
     "next": "14.2.6",
+    "r3f-perf": "^7.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hotkeys-hook": "^4.5.0",
