--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@gsap/react": "^2.1.1",
     "@react-three/drei": "^9.111.3",
     "@react-three/fiber": "^8.17.5",
-    "@studio-freight/hamo": "^0.6.33",
+    "@darkroom.engineering/hamo": "^0.6.46",
+    "lenis": "^1.1.13",
     "@types/react-transition-group": "^4.4.11",
     "@types/three": "^0.167.2",
     "classnames": "^2.5.1",
