--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@darkroom.engineering/hamo": "^0.6.46",
+    "@darkroom.engineering/tempus": "^0.0.46",
     "@gsap/react": "^2.1.1",
     "@react-three/drei": "^9.111.3",
     "@react-three/fiber": "^8.17.5",
-    "@darkroom.engineering/hamo": "^0.6.46",
-    "lenis": "^1.1.13",
     "@types/react-transition-group": "^4.4.11",
     "@types/three": "^0.167.2",
     "classnames": "^2.5.1",
     "gsap": "^3.12.5",
+    "lenis": "^1.1.13",
     "leva": "^0.9.35",
     "maath": "^0.10.8",
     "next": "14.2.6",
