--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@gsap/react": "^2.1.1",
     "@react-three/drei": "^9.111.3",
     "@react-three/fiber": "^8.17.5",
+    "@types/lodash": "^4.17.7",
     "@types/react-transition-group": "^4.4.11",
     "@types/three": "^0.167.2",
     "classnames": "^2.5.1",
     "gsap": "^3.12.5",
     "lenis": "^1.1.13",
     "leva": "^0.9.35",
+    "lodash": "^4.17.21",
     "maath": "^0.10.8",
     "next": "14.2.6",
     "r3f-perf": "^7.2.1",
