--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-three/drei": "^9.111.3",
     "@react-three/fiber": "^8.17.5",
     "@types/lodash": "^4.17.7",
+    "@types/mdx": "^2.0.13",
     "@types/react-transition-group": "^4.4.11",
     "@types/three": "^0.167.2",
     "classnames": "^2.5.1",
@@ -24,6 +25,7 @@
     "lodash": "^4.17.21",
     "maath": "^0.10.8",
     "next": "14.2.6",
+    "next-mdx-remote": "^5.0.0",
     "r3f-perf": "^7.2.1",
     "react": "^18",
     "react-dom": "^18",
