--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,9 @@
       "@/*": [
         "./src/*",
         "./public/*"
+      ],
+      "@content/*": [
+        "./src/content/*"
       ]
     }
   },
