Install and configure velete for project

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,8 +22,8 @@
         "./src/*",
         "./public/*"
       ],
-      "@content/*": [
-        "./src/content/*"
+      "@site/content": [
+        "./.velete"
       ]
     }
   },
