--- a/package.json
+++ b/package.json
@@ -1,53 +1,53 @@
 {
-  "name": "thismarioperez-www6",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@darkroom.engineering/hamo": "^0.6.46",
-    "@darkroom.engineering/tempus": "^0.0.46",
-    "@gsap/react": "^2.1.1",
-    "@react-three/drei": "^9.111.3",
-    "@react-three/fiber": "^8.17.5",
-    "@types/lodash": "^4.17.7",
-    "@types/mdx": "^2.0.13",
-    "@types/react-transition-group": "^4.4.11",
-    "@types/three": "^0.167.2",
-    "classnames": "^2.5.1",
-    "gsap": "^3.12.5",
-    "lenis": "^1.1.13",
-    "leva": "^0.9.35",
-    "lodash": "^4.17.21",
-    "maath": "^0.10.8",
-    "next": "14.2.6",
-    "next-mdx-remote": "^5.0.0",
-    "r3f-perf": "^7.2.1",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hotkeys-hook": "^4.5.0",
-    "react-transition-group": "^4.4.5",
-    "three": "^0.167.1",
-    "usehooks-ts": "^3.1.0",
-    "zustand": "^4.5.5"
-  },
-  "devDependencies": {
-    "@svgr/webpack": "^8.1.0",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.6",
-    "glslify": "^7.1.1",
-    "glslify-loader": "^2.0.0",
-    "postcss": "^8",
-    "raw-loader": "^4.0.2",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "url-loader": "^4.1.1"
-  }
+    "name": "thismarioperez-www6",
+    "version": "0.1.0",
+    "private": true,
+    "type": "module",
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@darkroom.engineering/hamo": "^0.6.46",
+        "@darkroom.engineering/tempus": "^0.0.46",
+        "@gsap/react": "^2.1.1",
+        "@react-three/drei": "^9.111.3",
+        "@react-three/fiber": "^8.17.5",
+        "@types/lodash": "^4.17.7",
+        "@types/react-transition-group": "^4.4.11",
+        "@types/three": "^0.167.2",
+        "classnames": "^2.5.1",
+        "gsap": "^3.12.5",
+        "lenis": "^1.1.13",
+        "leva": "^0.9.35",
+        "lodash": "^4.17.21",
+        "maath": "^0.10.8",
+        "next": "14.2.6",
+        "r3f-perf": "^7.2.1",
+        "react": "^18",
+        "react-dom": "^18",
+        "react-hotkeys-hook": "^4.5.0",
+        "react-transition-group": "^4.4.5",
+        "three": "^0.167.1",
+        "usehooks-ts": "^3.1.0",
+        "zustand": "^4.5.5"
+    },
+    "devDependencies": {
+        "@svgr/webpack": "^8.1.0",
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "eslint": "^8",
+        "eslint-config-next": "14.2.6",
+        "glslify": "^7.1.1",
+        "glslify-loader": "^2.0.0",
+        "postcss": "^8",
+        "raw-loader": "^4.0.2",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5",
+        "url-loader": "^4.1.1",
+        "velite": "^0.1.1"
+    }
 }
