--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@types/lodash": "^4.17.7",
         "@types/react-transition-group": "^4.4.11",
         "@types/three": "^0.167.2",
+        "@types/validator": "^13.12.1",
         "classnames": "^2.5.1",
         "gsap": "^3.12.5",
         "lenis": "^1.1.13",
@@ -32,6 +33,7 @@
         "react-transition-group": "^4.4.5",
         "three": "^0.167.1",
         "usehooks-ts": "^3.1.0",
+        "validator": "^13.12.0",
         "zustand": "^4.5.5"
     },
     "devDependencies": {
