Setup boilerplate for project pages

--- a/src/content/site/index.yml
+++ b/src/content/site/index.yml
@@ -11,9 +11,6 @@ navigation:
     - name: Projects
       type: folder
       children:
-          - name: FBI Safe Online Surfing
-            type: link
-            href: /projects/fbi-safe-online-surfing
           - name: Robin Knows
             type: link
             href: /projects/robin-knows
@@ -23,3 +20,15 @@ navigation:
           - name: Triptych Co
             type: link
             href: /projects/triptych-co
+          - name: Wind River
+            type: link
+            href: /projects/wind-river
+          - name: FBI Safe Online Surfing
+            type: link
+            href: /projects/fbi-safe-online-surfing
+          - name: Robin Knows
+            type: link
+            href: /projects/robin-knows
+          - name: Rodda Construction
+            type: link
+            href: /projects/rodda-construction
