--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@gsap/react": "^2.1.1",
         "@react-three/drei": "^9.111.3",
         "@react-three/fiber": "^8.17.5",
+        "@tailwindcss/typography": "^0.5.15",
         "@types/lodash": "^4.17.7",
         "@types/react-transition-group": "^4.4.11",
         "@types/three": "^0.167.2",
