--- a/src/content/site/index.yml
+++ b/src/content/site/index.yml
@@ -23,9 +23,9 @@ navigation:
           - name: Qgiv Donation Forms
             type: link
             href: /projects/qgiv
-          - name: Your Personal Mainstreet
+          - name: Your Personal Main Street
             type: link
-            href: /projects/meta-your-personal-mainstreet
+            href: /projects/meta-your-personal-main-street
           - name: Rodda Construction
             type: link
             href: /projects/rodda-construction
