--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "react": "^18",
         "react-dom": "^18",
         "react-hotkeys-hook": "^4.5.0",
+        "react-icons": "^5.3.0",
         "react-transition-group": "^4.4.5",
         "three": "^0.167.1",
         "usehooks-ts": "^3.1.0",
