--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "glslify-loader": "^2.0.0",
         "postcss": "^8",
         "raw-loader": "^4.0.2",
+        "rehype-external-links": "^3.0.0",
         "tailwindcss": "^3.4.1",
         "typescript": "^5",
         "url-loader": "^4.1.1",
