--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
         "@types/three": "^0.167.2",
         "@types/validator": "^13.12.1",
         "classnames": "^2.5.1",
-        "crypto-randomuuid": "^1.0.0",
         "gsap": "^3.12.5",
         "lenis": "^1.1.13",
         "leva": "^0.9.35",
@@ -36,6 +35,7 @@
         "react-transition-group": "^4.4.5",
         "three": "^0.167.1",
         "usehooks-ts": "^3.1.0",
+        "uuidv7": "^1.0.2",
         "validator": "^13.12.0",
         "zustand": "^4.5.5"
     },
