--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@darkroom.engineering/hamo": "^0.6.46",
         "@darkroom.engineering/tempus": "^0.0.46",
         "@gsap/react": "^2.1.1",
+        "@next/third-parties": "^14.2.12",
         "@react-three/drei": "^9.111.3",
         "@react-three/fiber": "^8.17.5",
         "@tailwindcss/typography": "^0.5.15",
